--- a/media-plugins/vdr-skinelchi/ChangeLog
+++ b/media-plugins/vdr-skinelchi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-skinelchi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-skinelchi/ChangeLog,v 1.3 2006/05/19 20:33:41 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-skinelchi/ChangeLog,v 1.4 2006/06/23 08:55:28 zzam Exp $
+
+  23 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  vdr-skinelchi-0.1.1-r1.ebuild:
+  Marked stable on x86.
 
 *vdr-skinelchi-0.1.1-r1 (19 May 2006)
 
