--- a/media-plugins/vdr-dvd/ChangeLog
+++ b/media-plugins/vdr-dvd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-dvd
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-dvd/ChangeLog,v 1.2 2006/02/04 17:04:47 hd_brummy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-dvd/ChangeLog,v 1.3 2006/06/23 09:04:06 zzam Exp $
+
+  23 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  vdr-dvd-0.3.7_pre20060204.ebuild:
+  Marked stable on x86.
 
 *vdr-dvd-0.3.7_pre20060204 (04 Feb 2006)
 
