--- a/media-plugins/vdr-reelchannelscan/ChangeLog
+++ b/media-plugins/vdr-reelchannelscan/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/vdr-reelchannelscan
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-reelchannelscan/ChangeLog,v 1.4 2006/06/17 21:56:25 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-reelchannelscan/ChangeLog,v 1.5 2006/06/23 09:15:35 zzam Exp $
+
+  23 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  -vdr-reelchannelscan-0.2.0.ebuild, -vdr-reelchannelscan-0.3.0.ebuild,
+  vdr-reelchannelscan-0.3.0-r1.ebuild:
+  Marked 0.3.0-r1 stable on x86. Removed older versions.
 
 *vdr-reelchannelscan-0.3.3 (17 Jun 2006)
 
