--- a/net-misc/dhcpcd/ChangeLog
+++ b/net-misc/dhcpcd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/dhcpcd
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.98 2006/06/05 11:19:32 uberlord Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.99 2006/06/23 10:39:24 uberlord Exp $
+
+*dhcpcd-2.0.7 (23 Jun 2006)
+
+  23 Jun 2006; Roy Marples <uberlord@gentoo.org> +dhcpcd-2.0.7.ebuild:
+  New version, fixes #137478 as well as some more bugs.
 
 *dhcpcd-2.0.6 (05 Jun 2006)
 
