--- a/dev-perl/File-Find-Rule/ChangeLog
+++ b/dev-perl/File-Find-Rule/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/File-Find-Rule
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-Find-Rule/ChangeLog,v 1.30 2006/05/22 21:52:59 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/File-Find-Rule/ChangeLog,v 1.31 2006/06/23 17:48:38 mcummings Exp $
+
+*File-Find-Rule-0.30 (23 Jun 2006)
+
+  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
+  +File-Find-Rule-0.30.ebuild:
+  Version bump upstream
 
 *File-Find-Rule-0.29 (22 May 2006)
 
