--- a/app-dicts/myspell-uk/ChangeLog
+++ b/app-dicts/myspell-uk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/myspell-uk
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/myspell-uk/ChangeLog,v 1.3 2006/05/22 19:19:58 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/myspell-uk/ChangeLog,v 1.4 2006/06/23 18:24:11 gustavoz Exp $
+
+  23 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  myspell-uk-20060316.ebuild:
+  Stable on sparc
 
   22 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   myspell-uk-20060316.ebuild:
