--- a/dev-libs/libmemcache/ChangeLog
+++ b/dev-libs/libmemcache/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libmemcache
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libmemcache/ChangeLog,v 1.8 2006/06/07 02:25:08 tcort Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libmemcache/ChangeLog,v 1.9 2006/06/23 21:40:23 gustavoz Exp $
+
+  23 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  libmemcache-1.2.4.ebuild:
+  Stable on sparc
 
   07 Jun 2006; Thomas Cort <tcort@gentoo.org> libmemcache-1.2.4.ebuild:
   Stable on amd64.
