--- a/dev-perl/HTTP-Server-Simple/ChangeLog
+++ b/dev-perl/HTTP-Server-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTTP-Server-Simple
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Server-Simple/ChangeLog,v 1.10 2006/06/19 15:41:11 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-Server-Simple/ChangeLog,v 1.11 2006/06/23 23:55:24 mcummings Exp $
+
+  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
+  HTTP-Server-Simple-0.20.ebuild:
+  Keywording ~amd64
 
 *HTTP-Server-Simple-0.20 (19 Jun 2006)
 
