--- a/media-tv/mythtv/ChangeLog
+++ b/media-tv/mythtv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.101 2006/06/23 01:25:22 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.102 2006/06/23 23:57:10 cardoe Exp $
+
+  23 Jun 2006; Doug Goldstein <cardoe@gentoo.org> mythtv-0.19_p10281.ebuild:
+  Add msg about XvMC USE flag.
 
 *mythtv-0.19_p10281 (23 Jun 2006)
 
