--- a/dev-perl/Sub-Uplevel/ChangeLog
+++ b/dev-perl/Sub-Uplevel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Sub-Uplevel
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.19 2006/06/23 23:45:48 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.20 2006/06/23 23:46:20 mcummings Exp $
+
+  23 Jun 2006; Michael Cummings <mcummings@gentoo.org> ChangeLog:
+  Version bump upstream
 
 *Sub-Uplevel-0.12 (23 Jun 2006)
 
