--- a/x11-proto/xcmiscproto/ChangeLog
+++ b/x11-proto/xcmiscproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xcmiscproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.17 2006/06/23 23:49:43 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.18 2006/06/24 03:56:30 joshuabaergen Exp $
+
+  24 Jun 2006; Joshua Baergen <joshuabaergen@gentoo.org>
+  files/digest-xcmiscproto-1.1.2, Manifest:
+  Hmm, fix digest for real this time...
 
   23 Jun 2006; Joshua Baergen <joshuabaergen@gentoo.org>
   files/digest-xcmiscproto-1.1.2, Manifest:
