--- a/virtual/perl-Test-Harness/ChangeLog
+++ b/virtual/perl-Test-Harness/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Test-Harness
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Test-Harness/ChangeLog,v 1.12 2006/05/26 14:51:25 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Test-Harness/ChangeLog,v 1.13 2006/06/24 19:10:26 mcummings Exp $
+
+*perl-Test-Harness-2.62 (24 Jun 2006)
+
+  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
+  +perl-Test-Harness-2.62.ebuild:
+  Version bump
 
   26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   perl-Test-Harness-2.56.ebuild:
