--- a/net-misc/openssh/ChangeLog
+++ b/net-misc/openssh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/openssh
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openssh/ChangeLog,v 1.176 2006/06/24 19:32:45 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/openssh/ChangeLog,v 1.177 2006/06/24 19:34:24 flameeyes Exp $
+
+  24 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
+  openssh-4.3_p2-r1.ebuild:
+  Remove x86-fbsd keyword from an older rev, just to be safe.
 
   24 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
   openssh-4.3_p2-r2.ebuild:
