--- a/app-vim/perl-support/ChangeLog
+++ b/app-vim/perl-support/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-vim/perl-support
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/perl-support/ChangeLog,v 1.7 2006/04/20 00:21:32 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/perl-support/ChangeLog,v 1.8 2006/06/24 20:55:25 mcummings Exp $
+
+*perl-support-3.1 (24 Jun 2006)
+
+  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
+  +perl-support-3.1.ebuild:
+  Version bump
 
 *perl-support-3.0 (20 Apr 2006)
 
