--- a/sys-fs/mdadm/ChangeLog
+++ b/sys-fs/mdadm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/mdadm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.31 2006/06/25 00:21:12 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.32 2006/06/25 00:51:37 vapier Exp $
+
+*mdadm-2.5-r1 (25 Jun 2006)
+
+  25 Jun 2006; Mike Frysinger <vapier@gentoo.org>
+  +files/mdadm-2.5-pointer-magic.patch, +mdadm-2.5-r1.ebuild:
+  Fix up strict alias warnings #137440 by Andrew Gaffney.
 
   25 Jun 2006; Mike Frysinger <vapier@gentoo.org>
   +files/mdadm-2.5-build.patch, files/mdadm-2.5-ssl-cleanup.patch,
