--- a/media-sound/audacious/ChangeLog
+++ b/media-sound/audacious/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/audacious
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacious/ChangeLog,v 1.48 2006/06/23 21:04:24 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacious/ChangeLog,v 1.49 2006/06/25 01:07:27 chainsaw Exp $
+
+  25 Jun 2006; Tony Vroon <chainsaw@gentoo.org>
+  audacious-1.1.0_beta2-r1.ebuild:
+  Depend on taglib unconditionally as configure.ac wants us to. Closes bug
+  #134542.
 
   23 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   audacious-1.0.0-r1.ebuild:
