--- a/dev-java/jikes/ChangeLog
+++ b/dev-java/jikes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jikes
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jikes/ChangeLog,v 1.40 2006/06/03 18:35:14 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jikes/ChangeLog,v 1.41 2006/06/25 01:12:45 nichoj Exp $
+
+  25 Jun 2006; <nichoj@gentoo.org> +files/compiler-settings, +files/jikes:
+  Revision bump to add support for new Java system.
 
   03 Jun 2006; Guy Martin <gmsoft@gentoo.org> jikes-1.22-r1.ebuild:
   Removing hppa KEYWORDS. HPPA will not support java anymore.
