--- a/net-wireless/libbtctl/ChangeLog
+++ b/net-wireless/libbtctl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/libbtctl
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/libbtctl/Attic/ChangeLog,v 1.23 2006/04/22 09:24:38 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/libbtctl/Attic/ChangeLog,v 1.24 2006/06/25 05:48:27 mrness Exp $
+
+  25 Jun 2006; Alin Nastac <mrness@gentoo.org> libbtctl-0.6.0-r1.ebuild:
+  Stable on x86 (#122262).
 
 *libbtctl-0.6.0-r1 (22 Apr 2006)
 
