--- a/media-libs/netpbm/ChangeLog
+++ b/media-libs/netpbm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.123 2006/06/24 23:37:00 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.124 2006/06/25 07:25:11 dertobi123 Exp $
+
+  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> netpbm-10.34.ebuild:
+  ppc stable, bug #137344
 
   24 Jun 2006; Mike Frysinger <vapier@gentoo.org>
   +files/netpbm-10.34-xml2.patch, netpbm-10.34.ebuild:
