--- a/app-misc/screen/ChangeLog
+++ b/app-misc/screen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/screen
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/screen/ChangeLog,v 1.110 2006/06/22 21:01:23 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/screen/ChangeLog,v 1.111 2006/06/25 09:18:55 blubb Exp $
+
+  25 Jun 2006; Simon Stelling <blubb@gentoo.org> screen-4.0.2-r5.ebuild:
+  stable on amd64
 
   22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   screen-4.0.2-r5.ebuild:
