--- a/x11-misc/shared-mime-info/ChangeLog
+++ b/x11-misc/shared-mime-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.50 2006/04/22 16:05:18 foser Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.51 2006/06/25 20:30:07 the_paya Exp $
+
+  25 Jun 2006; Javier Villavicencio <the_paya@gentoo.org>
+  shared-mime-info-0.17-r2.ebuild:
+  Add ~x86-fbsd keyword.
 
 *shared-mime-info-0.17-r2 (22 Apr 2006)
 
