--- a/media-libs/glitz/ChangeLog
+++ b/media-libs/glitz/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/glitz
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/glitz/Attic/ChangeLog,v 1.22 2006/06/03 16:40:56 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/glitz/Attic/ChangeLog,v 1.23 2006/06/25 20:30:28 the_paya Exp $
+
+  25 Jun 2006; Javier Villavicencio <the_paya@gentoo.org>
+  glitz-0.4.4.ebuild:
+  Add ~x86-fbsd keyword.
 
 *glitz-0.5.6 (03 Jun 2006)
 
