--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.72 2006/06/23 06:43:13 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.73 2006/06/25 20:31:11 the_paya Exp $
+
+  25 Jun 2006; Javier Villavicencio <the_paya@gentoo.org>
+  cairo-1.0.4.ebuild:
+  Add ~x86-fbsd keyword.
 
 *cairo-1.1.8 (23 Jun 2006)
 
