--- a/kde-base/kbackgammon/ChangeLog
+++ b/kde-base/kbackgammon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kbackgammon
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbackgammon/Attic/ChangeLog,v 1.46 2006/06/01 16:59:02 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kbackgammon/Attic/ChangeLog,v 1.47 2006/06/25 21:34:37 flameeyes Exp $
+
+  25 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
+  kbackgammon-3.5.3.ebuild:
+  Add ~x86-fbsd keyword.
 
 *kbackgammon-3.5.3 (01 Jun 2006)
 
