--- a/dev-perl/PDL/ChangeLog
+++ b/dev-perl/PDL/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PDL
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.51 2006/06/25 20:10:34 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.52 2006/06/26 05:56:47 gmsoft Exp $
+
+  26 Jun 2006; Guy Martin <gmsoft@gentoo.org> PDL-2.4.2-r1.ebuild:
+  Stable on hppa.
 
   25 Jun 2006; Simon Stelling <blubb@gentoo.org> PDL-2.4.2-r1.ebuild:
   stable on amd64
