--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.171 2006/06/23 00:25:14 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.172 2006/06/26 05:59:29 compnerd Exp $
+
+  26 Jun 2006; Saleem Abdulrasool <compnerd@gentoo.org>
+  vlc-0.8.4a-r1.ebuild, vlc-0.8.5-r3.ebuild:
+  adding gnome2 to inherit (resolves bug #117158)
 
   23 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.2-r2.ebuild,
   vlc-0.8.4a.ebuild, vlc-0.8.4a-r1.ebuild, -vlc-0.8.5-r2.ebuild,
