--- a/net-im/psi/ChangeLog
+++ b/net-im/psi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/psi
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/ChangeLog,v 1.95 2006/06/25 20:34:16 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psi/ChangeLog,v 1.96 2006/06/26 11:16:28 blubb Exp $
+
+  26 Jun 2006; Simon Stelling <blubb@gentoo.org> psi-0.10.ebuild:
+  fix HOMEPAGE
 
   25 Jun 2006; Simon Stelling <blubb@gentoo.org> psi-0.10.ebuild:
   stable on amd64
