--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.71 2006/06/25 06:00:37 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.72 2006/06/26 13:54:25 gustavoz Exp $
+
+  26 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  bluez-libs-2.25.ebuild:
+  Stable on sparc
 
   25 Jun 2006; Alin Nastac <mrness@gentoo.org> bluez-libs-2.25.ebuild:
   Stable on x86 (#122262).
