--- a/net-wireless/bluez-utils/ChangeLog
+++ b/net-wireless/bluez-utils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez-utils
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-utils/Attic/ChangeLog,v 1.76 2006/06/25 06:56:30 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-utils/Attic/ChangeLog,v 1.77 2006/06/26 13:59:11 gustavoz Exp $
+
+  26 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  bluez-utils-2.25-r1.ebuild:
+  Stable on sparc
 
   25 Jun 2006; Alin Nastac <mrness@gentoo.org> bluez-utils-2.25-r1.ebuild:
   Stable on x86 (#122262).
