--- a/net-wireless/gnome-bluetooth/ChangeLog
+++ b/net-wireless/gnome-bluetooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/gnome-bluetooth
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.29 2006/06/25 06:02:03 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.30 2006/06/26 14:50:34 gustavoz Exp $
+
+  26 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gnome-bluetooth-0.7.0-r1.ebuild:
+  Stable on sparc
 
   25 Jun 2006; Alin Nastac <mrness@gentoo.org>
   gnome-bluetooth-0.7.0-r1.ebuild:
