--- a/media-libs/pdflib/ChangeLog
+++ b/media-libs/pdflib/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/pdflib
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pdflib/Attic/ChangeLog,v 1.56 2006/03/07 12:46:14 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pdflib/Attic/ChangeLog,v 1.57 2006/06/26 15:01:48 chtekk Exp $
+
+*pdflib-6.0.3 (26 Jun 2006)
+
+  26 Jun 2006; Luca Longinotti <chtekk@gentoo.org> +pdflib-6.0.3.ebuild:
+  Version bump.
 
   07 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml:
   Add maintainer-needed metadata.
