--- a/media-video/dvdbackup/ChangeLog
+++ b/media-video/dvdbackup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/dvdbackup
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dvdbackup/ChangeLog,v 1.14 2006/05/03 20:48:11 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/dvdbackup/ChangeLog,v 1.15 2006/06/26 19:06:24 blubb Exp $
+
+  26 Jun 2006; Simon Stelling <blubb@gentoo.org> dvdbackup-0.1.1-r2.ebuild:
+  stable on amd64
 
   03 May 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
   Update metadata to list media-video@gentoo.org as maintainer.
