--- a/app-editors/nano/ChangeLog
+++ b/app-editors/nano/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.112 2006/06/26 19:09:54 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.113 2006/06/26 19:39:19 corsair Exp $
+
+  26 Jun 2006; Markus Rothe <corsair@gentoo.org> nano-1.3.11-r2.ebuild:
+  Stable on ppc64; bug #138086
 
   26 Jun 2006; Simon Stelling <blubb@gentoo.org> nano-1.3.11-r2.ebuild:
   stable on amd64
