--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.148 2006/06/25 09:41:53 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.149 2006/06/26 19:55:49 gmsoft Exp $
+
+  26 Jun 2006; Guy Martin <gmsoft@gentoo.org> xterm-215.ebuild:
+  Stable on hppa.
 
   25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> xterm-215.ebuild:
   ppc stable, bug #135974
