--- a/net-wireless/wpa_supplicant/ChangeLog
+++ b/net-wireless/wpa_supplicant/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/wpa_supplicant
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.63 2006/06/24 16:35:52 brix Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.64 2006/06/26 22:12:11 brix Exp $
+
+  26 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
+  wpa_supplicant-0.4.9.ebuild:
+  Stable on x86.
 
   24 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
   wpa_supplicant-0.4.7.ebuild, wpa_supplicant-0.4.8.ebuild,
