--- a/kde-base/kopete/ChangeLog
+++ b/kde-base/kopete/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kopete
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kopete/ChangeLog,v 1.66 2006/06/22 12:48:38 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kopete/ChangeLog,v 1.67 2006/06/27 08:26:13 flameeyes Exp $
+
+  27 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kopete-3.5.2.ebuild,
+  kopete-3.5.3.ebuild, kopete-3.5.3-r1.ebuild:
+  Add check for Qt 3 built with opengl support, needed for webcam support.
 
   22 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kopete-3.4.3.ebuild:
   Move myconf population in src_compile rather than global scope.
