--- a/dev-libs/openct/ChangeLog
+++ b/dev-libs/openct/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/openct
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/openct/ChangeLog,v 1.17 2006/06/26 13:26:00 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/openct/ChangeLog,v 1.18 2006/06/27 10:59:03 gmsoft Exp $
+
+  27 Jun 2006; Guy Martin <gmsoft@gentoo.org> openct-0.6.6.ebuild:
+  Stable on hppa.
 
   26 Jun 2006; Simon Stelling <blubb@gentoo.org> openct-0.6.6.ebuild:
   stable on amd64
