--- a/sys-apps/file/ChangeLog
+++ b/sys-apps/file/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/file/ChangeLog,v 1.100 2006/06/27 11:04:50 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/file/ChangeLog,v 1.101 2006/06/27 12:00:06 tcort Exp $
+
+  27 Jun 2006; Thomas Cort <tcort@gentoo.org> file-4.17-r1.ebuild:
+  Stable on alpha wrt Bug #138150.
 
   27 Jun 2006; Ferris McCormick <fmccor@gentoo.org> file-4.17-r1.ebuild:
   Stable on sparc --- Bug #138150 --- at developer request.  Seems fine.
